--- a/src/SolutionConnectionReferenceReassignment.csproj
+++ b/src/SolutionConnectionReferenceReassignment.csproj
@@ -234,8 +234,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\FlowActionModel.cs" />
     <Compile Include="Models\FlowModel.cs" />
     <Compile Include="Models\SolutionModel.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Services\FlowActionService.cs" />
     <Compile Include="Services\FlowService.cs" />
     <Compile Include="Services\SolutionService.cs" />
     <Compile Include="ToolCore\SolutionConnectionReferenceReassignment.cs" />
@@ -260,6 +267,22 @@
     <EmbeddedResource Include="Forms\SolutionConnectionReferenceReassignmentControl.resx">
       <DependentUpon>SolutionConnectionReferenceReassignmentControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icons\close_tool.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icons\about_tool.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icons\refresh_tool.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icons\youtube_tool.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
