--- a/src/SolutionConnectionReferenceReassignment.csproj
+++ b/src/SolutionConnectionReferenceReassignment.csproj
@@ -235,7 +235,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\FlowActionModel.cs" />
-    <Compile Include="Models\FlowConnectionReferenceModel.cs" />
+    <Compile Include="Models\ConnectionReferenceModel.cs" />
     <Compile Include="Models\FlowMetadataModel.cs" />
     <Compile Include="Models\SolutionModel.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -243,9 +243,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Services\ConnectionReferenceService.cs" />
     <Compile Include="Services\FlowActionService.cs" />
     <Compile Include="Services\FlowMetadataService.cs" />
-    <Compile Include="Services\OwnedConnectionReferenceService.cs" />
     <Compile Include="Services\SolutionService.cs" />
     <Compile Include="ToolCore\SolutionConnectionReferenceReassignment.cs" />
     <Compile Include="Forms\SolutionConnectionReferenceReassignmentControl.cs">
@@ -256,6 +256,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="Utilities\DataEnricher.cs" />
     <Compile Include="Utilities\FlowDefinitionOrchestrator.cs" />
     <Compile Include="Utilities\FlowJSONParser.cs" />
   </ItemGroup>
