--- a/src/SolutionConnectionReferenceReassignment.csproj
+++ b/src/SolutionConnectionReferenceReassignment.csproj
@@ -238,6 +238,7 @@
     <Compile Include="Models\ConnectionReferenceModel.cs" />
     <Compile Include="Models\FlowMetadataModel.cs" />
     <Compile Include="Models\SolutionModel.cs" />
+    <Compile Include="Orchestrators\FlowUiOrchestrator.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -257,7 +258,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Utilities\DataEnricher.cs" />
-    <Compile Include="Utilities\FlowDefinitionOrchestrator.cs" />
+    <Compile Include="Orchestrators\FlowDefinitionOrchestrator.cs" />
     <Compile Include="Utilities\FlowJSONParser.cs" />
   </ItemGroup>
   <ItemGroup>
