--- a/src/packages.config
+++ b/src/packages.config
@@ -9,10 +9,26 @@
   <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.59" targetFramework="net48" />
   <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.1.65" targetFramework="net48" />
   <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.1.1.65" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="3.1.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Http" version="3.1.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="3.1.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="3.1.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.8" targetFramework="net48" />
+  <package id="Microsoft.Identity.Client" version="4.66.1" targetFramework="net48" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.66.1" targetFramework="net48" />
   <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.35.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.NETCore.Targets" version="1.1.3" targetFramework="net48" />
+  <package id="Microsoft.PowerPlatform.Dataverse.Client" version="1.2.10" targetFramework="net48" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.24" targetFramework="net48" />
   <package id="Microsoft.Web.WebView2" version="1.0.1343.22" targetFramework="net48" />
   <package id="Microsoft.Web.Xdt" version="3.1.0" targetFramework="net48" />
@@ -25,19 +41,25 @@
   <package id="NuGet.Protocol" version="5.9.3" targetFramework="net48" />
   <package id="NuGet.Versioning" version="5.9.3" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.1" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Private.Uri" version="4.3.2" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net48" />
   <package id="System.Security.Cryptography.Cng" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Pkcs" version="5.0.1" targetFramework="net48" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.ProtectedData" version="4.5.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.ServiceModel.Http" version="4.10.3" targetFramework="net48" />
   <package id="System.ServiceModel.Primitives" version="4.10.3" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
