--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+
+#Personal Files
+/CHANGELOG.md
+
 #Project Specific Files
 /src/tmp/
 
