--- a/src/packages.config
+++ b/src/packages.config
@@ -40,6 +40,7 @@
   <package id="NuGet.Packaging" version="5.9.3" targetFramework="net48" />
   <package id="NuGet.Protocol" version="5.9.3" targetFramework="net48" />
   <package id="NuGet.Versioning" version="5.9.3" targetFramework="net48" />
+  <package id="PDFsharp" version="1.50.5147" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.1" targetFramework="net48" />
